kubernetes/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-helloworld
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host: hb.devops.case
    http:
      paths:
      - path: /
        backend:
          serviceName: go-helloworld
          servicePort: 80
